# copier

./: .gitignore  ANALYZE_README.md  Cargo.toml  DESIGN.md  INSTALL.md  LICENSE  README.md  SPECIFICATION.md  copier.toml  flake.nix  install.ps1  install.sh  quickctx.toml
.github/workflows/: ci.yml  packages.yml  update-package-managers.yml
scripts/: install.ps1  install.sh
src/: cli.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/aggregate/: collector.rs  glob_expansion.rs  mod.rs  walker_config.rs
src/analyze/: cache.rs  extractor.rs  formatter.rs  jsonrpc.rs  lsp_client.rs  lsp_config.rs  mod.rs  path_types.rs  progress.rs  project_root.rs  symbol_index.rs  type_extractor.rs  type_resolver.rs  uri_utils.rs
src/config/: mod.rs
src/copy/: collector.rs  glob_expansion.rs  mod.rs  walker_config.rs
src/extract/: mod.rs  path_hint.rs
src/fs/: mod.rs
src/paste/: mod.rs  path_hint.rs
src/render/: mod.rs
src/update/: mod.rs
src/utils/: language.rs  mod.rs
tests/: aggregate_extract.rs  analyze_cache.rs  config_test.rs  fs_test.rs  integration_test.rs  render_test.rs  utils_test.rs
