[package]
name = "copier"
version = "0.1.1"
edition = "2024"
authors = ["Copier Contributors"]
description = "A bidirectional file content aggregator and extractor that converts between files and markdown-formatted representations"
license = "MIT"
repository = "https://github.com/CaddyGlow/copier"
homepage = "https://github.com/CaddyGlow/copier"
readme = "README.md"
keywords = ["markdown", "aggregator", "extractor", "cli", "files"]
categories = ["command-line-utilities", "text-processing", "development-tools"]

[dependencies]
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
ignore = "0.4"
pulldown-cmark = { version = "0.13", default-features = false, features = [
  "simd",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
glob = "0.3"
globset = "0.4"
lsp-types = "0.95"
shellexpand = "3.1"
regex = "1.10"

# cargo-binstall support
# Enables fast binary installation via: cargo binstall copier
# Supports installation from pre-built GitHub release binaries
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-fmt = "zip"

[[bin]]
name = "copier"
path = "src/main.rs"

[[bin]]
name = "copier-analyze"
path = "src/bin/analyze.rs"

[dev-dependencies]
tempfile = "3.8"
